# hyperoute

./: .clang-format  .codecov.yml  .gitmodules  CMakeLists.txt  README.md  build_bench.bat  build_bench.sh  build_debug.bat  build_debug.sh  conanfile.txt
.github/workflows/: ci.yml  ql.yml
benchmark/: CMakeLists.txt  bench_github.hpp  bench_google.hpp  main.cpp  main_hyperoute.cpp  main_params.cpp
benchmark/third-parties/: CMakeLists.txt  config.h
ci/: valgrind-ci.py
cmake/: format.cmake
include/private/: error_category.hpp  route_trie.hpp  translate.hpp
include/private/backend/: boost_matcher.hpp  hyperscan_router.hpp  simple.matcher.hpp  simple_matcher.hpp  simple_router.hpp
include/public/hyperoute/: builder.hpp  builder_route_modifier.hpp  capture.hpp  ch_forward.hpp  context.hpp  context_params.hpp  error.hpp  regex_line.hpp  route_context.hpp  route_function.hpp  route_line.hpp  route_scratch.hpp  router.hpp
include/public/hyperoute/backend/: boost.hpp  boost_matcher.hpp  boost_router.hpp  hyperscan.hpp  hyperscan_matcher.hpp  hyperscan_router.hpp  matcher_backend.hpp  router_backend.hpp  simple.hpp
src/: builder.cpp  builder_route_modifier.cpp  context_params.cpp  error.cpp  error_category.cpp  route_scratch.cpp  route_trie.cpp  router.cpp  translate.cpp
src/backend/: boost.cpp  boost_matcher.cpp  boost_router.cpp  hyperscan.cpp  hyperscan_matcher.cpp  hyperscan_router.cpp  matcher_backend.cpp  router_backend.cpp  simple.cpp  simple_matcher.cpp  simple_router.cpp
test/: CMakeLists.txt  context_params.cpp  github_api.cpp  google_api.cpp  gtest_log_formater.cpp  gtest_log_formater.hpp  main.cpp  route_trie.cpp  translate_route.cpp
